--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,59 @@
+.container {
+	margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
+
+}
+}
+
 .title {
+	text-align: center;
+	margin-left: auto;
+    margin-right: auto;
+
+}
+
+h1 {
 	text-align: center;
 }
 
 .rules {
-	padding: 50px 150px 50px 150px;
+	padding: 30px;
+	margin-left: auto;
+    margin-right: auto;
 }
 
-/*.random {
-	width: 200px;
-	text-align: center;
-	border: solid;
-	border-width: 1px;
+
+
+.crystals {
+	min-width: 400px;
+	padding: 30px;
+	margin-left: auto;
+    margin-right: auto;
 }
-.score {
-	width: 200px;
-	text-align: center;
-	border: solid;
-	border-width: 1px; 
+
+.random {
+	width: 100px;
+	height: 100px;
+	padding: 20px;
+	position: relative;
+	left: 200px;
 }
+
+.wins-losses {
+	width: 100px;
+	height: 100px;
+	padding: 20px;
+	position: relative;
+	left: 300px;
+	
+}
+
+.points-box {
+	width: 200px;
+	padding: 20px;
+    position: relative;
+	left: 200px;
+}
+
+
