--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+
+	background: linear-gradient(to bottom, #7DE0FE, #F5BAFB);
+}
+
 .container {
 	margin-left: auto;
     margin-right: auto;
